fix dark mode kotlin code

--- a/_src/_includes/_assets/css/core.css
+++ b/_src/_includes/_assets/css/core.css
@@ -1388,7 +1388,7 @@ footer {
     }
 
     & code {
-      color: var(--light);
+      color: var(--bright);
     }
   }
 
